# 18th-Trico

./: .env.example  .gitignore  README.md  build.js  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js  zbpack.json
categories/: models.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_rename_updated_at_category_created_at.py
ckeditor/: ckeditorconfig.py  urls.py  views.py
comments/: forms.py  models.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_auto_20241226_1517.py  0002_initial.py  0003_comment_deleted_at_comment_is_deleted.py  0003_comment_service_comment_unique_comment.py  0004_comment_rating.py  0005_alter_comment_content.py  0006_alter_comment_user.py  0007_alter_comment_user_comment_unique_comment.py
common/: signals.py  urls.py  views.py
contact/: admin.py  forms.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py
core/: settings.py  urls.py  views.py
frontend/: linepay.js
frontend/scripts/: App.vue  app.js  like_button.js  plan_order_form.js  switching_tab.js  switching_tab_payment.js  (+3 more)
likes/: models.py
notification/: context_processors.py  models.py  urls.py  utils.py  views.py
order/: forms.py  models.py  urls.py  views.py
pages/: urls.py  views.py
payments/: 123.py  models.py  urls.py  views.py
search/: forms.py  models.py  urls.py  views.py
services/: apps.py  forms.py  models.py  permissions.py  signals.py  urls.py  views.py
users/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
utils/: image_processing.py  mixins.py
(+101 files in other folders)
