[tool.poetry]
name = "18th-trico"
version = "0.1.0"
description = ""
authors = ["doudouu0504 <selinafs880504@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
